added ParseUtil which provides better exceptions

--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Types\Period.cs" />
     <Compile Include="Utils\AsciiHelper.cs" />
     <Compile Include="Utils\ExceptionUtil.cs" />
+    <Compile Include="Utils\ParseUtil.cs" />
     <Compile Include="Utils\ThrowUtil.cs" />
   </ItemGroup>
   <ItemGroup>
