reproduced DI multiple instance bug with test case

--- a/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
+++ b/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
@@ -81,6 +81,9 @@
     <Compile Include="ContainerTest\ServiceD.cs" />
     <Compile Include="ContainerTest\ServiceC.cs" />
     <Compile Include="ContainerTest\ServiceY.cs" />
+    <Compile Include="ContainerTest\Singletons\ServiceSingletonA.cs" />
+    <Compile Include="ContainerTest\Singletons\ServiceSingletonB.cs" />
+    <Compile Include="ContainerTest\Singletons\SingletonsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
