--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Archimedes.Controls.WPF\packages.config" />
   <repository path="..\Archimedes.DI\packages.config" />
+  <repository path="..\Archimedes.Framework\packages.config" />
   <repository path="..\Archimedes.Geometry.Rendering\packages.config" />
   <repository path="..\Archimedes.Geometry.Tests\packages.config" />
   <repository path="..\Archimedes.Patterns\packages.config" />
