--- a/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
+++ b/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
@@ -51,6 +51,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ConfigurationTest\ConfigurationServiceTest.cs" />
     <Compile Include="ConfigurationTest\PropertiesParserTest.cs" />
     <Compile Include="ConfigurationTest\ServiceConfigTarget.cs" />
     <Compile Include="ConfigurationTest\ValueTest.cs" />
